packages/gugu/app/styles/main.css
@import 'tailwindcss';
@import './typography.css';

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

:root,
html[data-theme='light'] {
  --background: #fdfdfd;
  --foreground: #282728;
  --accent: #006cac;
  --muted: #e6e6e6;
  --border: #ece9e9;

  --accent-hover: color-mix(in srgb, var(--accent) 80%, white);
  --accent-active: color-mix(in srgb, var(--accent) 80%, black);
}

html[data-theme='dark'] {
  --background: #212737;
  --foreground: #eaedf3;
  --accent: #ff6b01;
  --muted: #343f60;
  --border: #ab4b08;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-accent: var(--accent);
  --color-muted: var(--muted);
  --color-border: var(--border);

  --color-accent-hover: var(--accent-hover);
  --color-accent-active: var(--accent-active);
}

@utility max-w-app {
  @apply max-w-4xl;
}

@utility foreground-link {
  @apply text-foreground hover:text-accent-hover active:text-accent-active;
}

@layer base {
  * {
    @apply border-border outline-accent/75;
    scrollbar-width: auto;
    scrollbar-color: var(--color-muted) transparent;
  }

  html {
    @apply overflow-y-scroll scroll-smooth;
  }

  body {
    /* font-family: 'Inter', sans-serif; */
    font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
      'Segoe UI Emoji', Segoe UI Symbol, 'Noto Color Emoji';
  }

  body {
    background-color: var(--background);
  }

  a {
    @apply text-accent hover:text-accent-hover active:text-accent-active;
  }

  a[aria-disabled='true'] {
    @apply text-muted cursor-default;
  }

  .page-bg-gradient {
    background-image: linear-gradient(var(--accent), transparent);
    @apply opacity-15 dark:opacity-10;
  }

  .iconify-svg {
    @apply inline-block;
  }
}

